# Universal-Ledger-Engine-ULE

./: .gitignore  0-shm  0-wal  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_LAUNCH_REPORT.md  GAP_ANALYSIS_AND_RECOMMENDATIONS.md  GEMINI_PROFESSIONAL_ANALYSIS.md  LAUNCH_PLAN.md  LICENSE  MANIFEST.in  Professional Database Interface.md  README.md  RELEASE_NOTES.md  ROADMAP_V2.md  SECURITY.md  TESTING_GUIDE.md  ULE_PROGRESS_AND_STABILIZATION_REPORT.md  docker-compose.yml  my_vault.wal  pyproject.toml  pytest.ini  qweenanalysis.md  refactor_patterns.py  requirements.txt  run_api.py  setup.py  test_nlq.py  test_server_critical.py  ule-init.sh  user_add.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  DEPLOYMENT.md  NEW_FEATURES.md  QUANTUM.md  QUICKSTART.md  README.md  SECURITY_FEATURES.md
examples/: 01_complete_demo.py  01_quickstart.py  02_multilingual.py  03_complete_demo.py  04_complete_demo_new_features.py  security_demo.py
examples/quantum/: 01_basics.py  02_circuits.py  03_algorithms.py
migrations/: 001_create_iot_schema.json  001_create_tutorial_tables.json  001_create_users_table.json  001_first.json  001_first_migration.json  001_function_migration.json  002_second.json  002_second_migration.json
test_1781624670.739842_snapshots/: snap_8fd06daab544258b.snap
test_1781624671.022683_snapshots/: snap_0c210c87203f6737.snap
test_1781624671.2684884_snapshots/: snap_71c1fd920e35bb3d.snap
test_1781624671.499332_snapshots/: snap_0c07c4ad165ca1e4.snap  snap_3d6b7db0a19fec18.snap  snap_c547492b75a2e47e.snap
test_1781624672.2954264_snapshots/: snap_35cfef3b1d59ad9f.snap
test_1781624672.5455496_snapshots/: snap_020b38fd16f5e5c4.snap
tests/: conftest.py  test_integration.py  test_integration_advanced.py
tests/test_ai/: test_nlq_ar.py  test_nlq_bn.py  (+12 more)
ule/: __init__.py  cli.py
ule_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ule_db_SadiqAli_123.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ule_studio/: index.html
(+115 files in other folders)
