[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ule-db"
version = "0.1.0"
authors = [
  { name="ULE Contributors", email="ule@example.com" },
]
description = "Universal Ledger Engine: One File, Every Model, Absolute Trust"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=46.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ule-db/ule"
Issues = "https://github.com/ule-db/ule/issues"

[project.scripts]
ule = "ule.cli:main"
